fix: resolve flickering on mobile device button click

--- a/src/components/Counter/Counter.module.css
+++ b/src/components/Counter/Counter.module.css
@@ -8,6 +8,7 @@
   background-color: transparent;
   color: #CBCDD1;
   cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .btn:hover {
