--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -28,6 +28,7 @@
   background: transparent;
   border: none;
   cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .img {
