--- a/src/components/VinylList/VinylList.module.css
+++ b/src/components/VinylList/VinylList.module.css
@@ -2,6 +2,7 @@
   padding-top: 50px;
   border-bottom: 2px solid #4B737B;
   cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .displayGrid {
